# opendatacam-mobile

./: .gitignore  DEVELOPER_NOTES.md  LICENSE  README.md  package-lock.json  package.json
android/: .gitignore  variables.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/: capacitor.config.json
android/app/src/main/assets/nodejs-project/: main.js  next.config.js  package-lock.json  package.json  server.js
android/app/src/main/assets/nodejs-project/server/: Opendatacam.js
android/app/src/main/cpp/: CMakeLists.txt  YoloV4.cpp  YoloV4.h  jni_interface.cpp
android/app/src/main/cpp/ncnn/include/ncnn/: command.h  cpu.h  datareader.h  gpu.h  layer.h  layer_shader_type_enum.h  mat.h  opencv.h  option.h  paramdict.h  pipeline.h  pipelinecache.h  platform.h  simplestl.h
android/app/src/main/cpp/ncnnvulkan/include/SPIRV/: Logger.h  disassemble.h  hex_float.h  spirv.hpp
android/app/src/main/cpp/ncnnvulkan/include/glslang/Include/: BaseTypes.h  Common.h  ConstantUnion.h  PoolAlloc.h  ResourceLimits.h  Types.h  arrays.h  glslang_c_interface.h  glslang_c_shader_types.h  intermediate.h  revision.h
android/app/src/main/cpp/ncnnvulkan/include/glslang/MachineIndependent/: Initialize.h  ParseHelper.h  Scan.h  ScanContext.h  SymbolTable.h  Versions.h  attribute.h  gl_types.h  glslang_tab.cpp.h  iomapper.h  localintermediate.h  parseVersions.h  reflection.h
android/app/src/main/cpp/ncnnvulkan/include/glslang/MachineIndependent/preprocessor/: PpContext.h
android/app/src/main/cpp/ncnnvulkan/include/glslang/Public/: ShaderLang.h
android/app/src/main/cpp/ncnnvulkan/include/glslang/SPIRV/: GLSL.ext.EXT.h  GLSL.ext.KHR.h  GLSL.ext.NV.h  GlslangToSpv.h  SPVRemapper.h  SpvBuilder.h  SpvTools.h  doc.h  spvIR.h
android/app/src/main/cpp/ncnnvulkan/include/ncnn/: allocator.h  benchmark.h  blob.h  c_api.h  layer_shader_type_enum.h  layer_type_enum.h  modelbin.h  net.h  platform.h
android/app/src/main/cpp/node/: CMakeLists.txt  native-lib.cpp
android/app/src/main/cpp/yolo/: CMakeLists.txt  YoloV4.cpp  YoloV4.h  YoloV5.h  yolov4_jni_interface.cpp
android/app/src/main/java/com/opendatacam/: Bbox.java  Box.java  CameraActivity.java  CameraActivity.kt  CameraActivityLegacy.java  CameraObjectDetection.java  MainActivity.java  SplashActivity.java  YOLOv4.java  YuvToRgbConverter.kt
android/app/src/main/res/drawable/: splash_background.xml
android/app/src/main/res/layout/: camera_activity.xml
android/app/src/main/res/values/: strings.xml  styles.xml
android/gradle/wrapper/: gradle-wrapper.properties
www/: index.html
www/css/: copyfromnextjsinitialrender.css  style.css
www/js/: capacitor-welcome.js
